--- a/listicle-project1/public/index.html
+++ b/listicle-project1/public/index.html
@@ -30,8 +30,7 @@
       <footer>
         <small>
           <p>
-            © 2024 Boss Battle Guide - Created by Siting Wang for CodePath
-            WEB103
+            Boss Guide Listicle by Siting Wang
           </p>
         </small>
       </footer>
